--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
     {
       "src": "/(.*)",
       "dest": "./api/conv_book_web.py"
-    }
+    },
+    {
+        "src": "/ios/(.*)",
+        "dest": "./api/index.html"
+      }
     ]
 }
